--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,10 @@ img {
 .current-btn {
     background-color: var(--accent-color);
     color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+
 }
 
 /* Приимущества */
@@ -443,8 +447,6 @@ img {
 
 }
 
-
-
 .clients-link:hover .clients-icon,
 .clients-link:hover {
     border-color: var(--accent-color);
@@ -510,6 +512,13 @@ img {
     padding: 20px 24px;
 }
 
+.item-portfolio:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+
+}
+
 .examples {
     display: flex;
     flex-wrap: wrap;
@@ -519,13 +528,7 @@ img {
     justify-content: center;
 }
 
-/* .examples .item-portfolio:nth-child(3n) {
-    margin-right: 0;
-}
 
-.examples .item-portfolio:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-} */
 
 .examples-text {
     color: var(--primary-text-color);
@@ -568,4 +571,31 @@ footer .logo {
 
 footer .contact-link {
     color: rgba(255, 255, 255, 0.6);
+}
+
+footer>.container {
+    display: flex;
+
+    align-items: center;
+}
+
+.footer-adress {
+    margin-right: 70px;
+}
+
+.footer-media>h2 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.footer-media .item-media {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-media .item-media:hover {
+    background-color: var(--accent-color);
 }
